--- a/.travis.yml
+++ b/.travis.yml
@@ -22,14 +22,14 @@ matrix:
       before_install:
         - sudo apt install python3-pip
         - sudo apt install pyqt5-dev-tools
-        - sudo pip3 install -y lxml
-        - sudo pip3 install -y torch
-        - sudo pip3 install -y torchvision
-        - sudo pip3 install -y matplotlib
-        - sudo pip3 install -y numpy
-        - sudo pip3 install -y pandas
-        - sudo pip3 install -y scikit-image
-        - sudo pip3 install -y python-opencv
+        - sudo pip3 install lxml
+        - sudo pip3 install torch
+        - sudo pip3 install torchvision
+        - sudo pip3 install matplotlib
+        - sudo pip3 install numpy
+        - sudo pip3 install pandas
+        - sudo pip3 install scikit-image
+        - sudo pip3 install python-opencv
         - ls
         #- sudo pip3 install -r requirements.txt       
         #- make qt5py3
