--- a/.travis.yml
+++ b/.travis.yml
@@ -23,14 +23,14 @@ matrix:
       before_install:
         - sudo apt install python3-pip
         - sudo apt install pyqt5-dev-tools
-        - sudo pip3 install lxml --progress-bar off
-        - sudo pip3 install torch --progress-bar off
-        - sudo pip3 install torchvision --progress-bar off
-        - sudo pip3 install matplotlib --progress-bar off
-        - sudo pip3 install numpy --progress-bar off
-        - sudo pip3 install pandas --progress-bar off
-        - sudo pip3 install scikit-image --progress-bar off
-        - sudo pip3 install python-opencv --progress-bar off
+        - sudo pip3 install lxml
+        #- sudo pip3 install torch
+        #- sudo pip3 install torchvision
+        - sudo pip3 install matplotlib
+        - sudo pip3 install numpy
+        - sudo pip3 install pandas
+        - sudo pip3 install scikit-image
+        - sudo pip3 install python-opencv
         - ls
         #- sudo pip3 install -r requirements.txt       
         #- make qt5py3
