--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ matrix:
         - sudo pip3 install numpy
         - sudo pip3 install pandas
         - sudo pip3 install scikit-image
-        - sudo pip3 install python-opencv
+        - sudo pip3 install opencv-python
         - ls
         #- sudo pip3 install -r requirements.txt       
         #- make qt5py3
