--- a/.travis.yml
+++ b/.travis.yml
@@ -1,40 +1,17 @@
-# vim: set ts=2 et:
-
-# run xvfb with 32-bit color
-# xvfb-run -s '-screen 0 1600x1200x24+32' command_goes_here
-
 matrix:
   include:
-
-    # Python 3 + QT5
     - os: linux
       dist: bionic
       sudo: required
       language: generic
       python: "3.5"
       cache: pip
-      env:
-        - QT=5
-      addons:
-        apt:
-          packages:
-            - cmake
-            - xvfb
+
       before_install:
         - sudo apt install python3-pip
         - sudo apt install pyqt5-dev-tools
-        - sudo pip3 install lxml
-        #- sudo pip3 install torch
-        #- sudo pip3 install torchvision
-        - sudo pip3 install matplotlib
-        - sudo pip3 install numpy
-        - sudo pip3 install pandas
-        - sudo pip3 install scikit-image
-        - sudo pip3 install opencv-python
-        - ls
         #- sudo pip3 install -r requirements.txt       
-        #- make qt5py3
-        #- xvfb-run make testpy3
 
 script:
+  - echo "Yeet"
   - exit 0
